<resources>
    <string name="app_name">Event App</string>
    <string name="menu_active">Active</string>
    <string name="menu_nonactive">Ended</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">menu search</string>
    <string name="search_hint">search</string>
    <string name="smooth_bottom_bar">smooth bottom bar</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finish_event">Finish Event</string>
    <string name="menu_home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="it_seems_you_are_not_connected_to_the_internet">It seems you are not connected.</string>
    <string name="please_check_your_connection">Please check your connection.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="empty_data">Empty Data</string>
    <string name="content_image_description">banner</string>
    <string name="register">Register</string>
    <string name="poster">Poster</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>